[project]
name = "simulating-queues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
]

[tool.uv]
dev-dependencies = [
    "2to3>=1.0",
    "matplotlib-stubs>=0.2.0",
    "mypy>=1.11.2",
    # sudo apt-get install python3 python3-pip python3-venv
    "pyre-check>=0.9.22",
    "ruff>=0.6.5",
]

# sudo apt update
# sudo apt install tk-dev tcl-dev python3-tk
