[project]
name = "simulating-queues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "polars>=1.7.1",
    "pyarrow>=17.0.0",
    "pydantic-settings>=2.5.2",
    "pyglet>=2.0.17",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "2to3>=1.0",
    "hypothesis>=6.112.1",
    "matplotlib-stubs>=0.2.0",
    "mypy>=1.11.2",
    "pip>=24.2",
    "pyre-check==0.9.19",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
]

# sudo apt-get install python3 python3-pip python3-venv
# sudo apt update
# sudo apt install tk-dev tcl-dev python3-tk
